[package]
name = "stonks"
version = "2.2.1"
authors = ["Cody Bloemhard <codybloemhard@gmail.com>"]
edition = "2021"
license = "GPL-3.0-only"
description = "Small tool to track personal finance, transactional database like style."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
term-basics-linux = "1.0.0"
zen-colour = "1.1.1"
lapp = "0.4.0"
fasteval = "0.2.4"
